--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -12,8 +12,7 @@ jobs:
 
       - name: Test
         run: |
-          docker run --rm -v $(pwd):/app -w /app mcr.microsoft.com/dotnet/sdk:8.0
-          cd ./app/TicketsRUs.Tests/
+          docker run --rm -v $(pwd):/app -w /app/TicketsRUs.Tests mcr.microsoft.com/dotnet/sdk:8.0
           dotnet test
 
       - name: "Run docker compose"
