--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -15,11 +15,17 @@ jobs:
           cd ./TelemetryTickets/TicketsRUs.Tests
           dotnet test
 
+      - name: "This is Linting"
+        run: 
+          cd ./TelemetryTickets
+          docker run --rm -v "$(pwd):/app" -w /app/TicketsRUs.Tests -e DOTNET_CLI_HOME="/tmp/dotnet" --user $(id -u):$(id -g) mcr.microsoft.com/dotnet/sdk:8.0 dotnet test
+
       - name: "Run docker compose"
         run: |
           cd ./TelemetryTickets/LurisDockercompose
           docker compose up --build -d
 
+      
 
 
 #Do something
