--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -14,7 +14,7 @@ jobs:
         run: | 
           cd ./TelemetryTickets/TicketsRUs.Tests   
           dotnet test       
-
+## This is a commet to make my action run xd
       - name: Linting
         run: |
           cd ./TelemetryTickets/TicketsRUs.Tests 
