--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -20,6 +20,11 @@ jobs:
           cd ./TelemetryTickets/TicketsRUs.Tests 
           dotnet format --verify -no -changes --severity
 
+      - name: Warning Errors
+        run: |
+          cd ./TelemetryTickets/TicketsRUs.Tests
+          dotnet build --warnaserror
+
       - name: "Run docker compose"
         run: |
           cd ./TelemetryTickets/LurisDockercompose
