--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -14,16 +14,15 @@ jobs:
         run: | 
           cd ./TelemetryTickets/TicketsRUs.Tests   
           dotnet test       
-## This is a commet to make my action run xd
-      # - name: Linting
-      #   run: |
-      #     cd ./TelemetryTickets/TicketsRUs.Tests 
-      #     dotnet format --verify -no -changes --severity
+
+      - name: Linting
+        run: |
+          cd ./TelemetryTickets/TicketsRUs.Tests 
+          dotnet format --verify -no -changes --severity
 
       - name: Warning Errors
         run: |
           cd ./TelemetryTickets/TicketsRUs.Tests
-          dotnet build --warnaserror
 
       - name: "Run docker compose"
         run: |
