--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Linting
         run: |
           cd ./TelemetryTickets/TicketsRUs.Tests 
-          dotnet format --verify -no -changes --severity
+          dotnet format --verify-no-changes --severity warn
 
       - name: Warning Errors
         run: |
