--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -15,19 +15,19 @@ jobs:
           cd ./TelemetryTickets/TicketsRUs.Tests   
           dotnet test       
 
-      - name: Linting
-        run: |
-          cd ./TelemetryTickets/TicketsRUs.Tests 
-          dotnet format --verify-no-changes --severity warn
+      # - name: Linting
+      #   run: |
+      #     cd ./TelemetryTickets/TicketsRUs.Tests 
+      #     dotnet format --verify-no-changes --severity warn
 
-      - name: Warning Errors
-        run: |
-          cd ./TelemetryTickets/TicketsRUs.Tests
+      # - name: Warning Errors
+      #   run: |
+      #     cd ./TelemetryTickets/TicketsRUs.Tests
 
-      - name: "Run docker compose"
-        run: |
-          cd ./TelemetryTickets/LurisDockercompose
-          docker compose up --build -d
+      # - name: "Run docker compose"
+      #   run: |
+      #     cd ./TelemetryTickets/LurisDockercompose
+      #     docker compose up --build -d
 ##
       
 
