--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -30,14 +30,14 @@ jobs:
           cd ./TelemetryTickets/LurisDockercompose
           docker compose up --build -d
 
-      # - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      # - name: Teams Notification
-      #   uses: dchourasia/ms-teams-notification@1.0
-      #   if: always()
-      #   with:
-      #     github-token: ${{ github.token }}
-      #     webhook-uri: ${{ secrets.TEAMLURIS}}.
+      - name: Teams Notification
+        uses: dchourasia/ms-teams-notification@1.0
+        if: always()
+        with:
+          github-token: ${{ github.token }}
+          webhook-uri: ${{ secrets.LURISWEBHOOK}}.
     
 ##
       
