--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -39,7 +39,7 @@ jobs:
               uses: skitionek/notify-microsoft-teams@master
               if: failure()
               with:
-                webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
+                webhook_url: ${{ secrets.LURISWEBHOOK}}
           
 
 
