--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -30,11 +30,12 @@ jobs:
           cd ./TelemetryTickets/LurisDockercompose
           docker compose up --build -d
 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - name: Microsoft Teams Notification
-        uses: skitionek/notify-microsoft-teams@master
+        uses: dchourasia/ms-teams-notification@1.0
         if: failure()
         with:
+          github-token: ${{ github.token }}
           webhook_url: ${{ secrets.LURISWEBHOOK}}
           
 
