--- a/LurisDockercompose/docker-compose.yml
+++ b/LurisDockercompose/docker-compose.yml
@@ -39,7 +39,7 @@ services:
   black-box:
   # https://github.com/prometheus/blackbox_exporter/releases
     image: prom/blackbox-exporter:v0.23.0
-    container_name: blackbox
+    container_name: luris_blackbox
     restart: unless-stopped
     ports: 
     - "2608:9115"
@@ -54,7 +54,7 @@ services:
   prometheus:
     # https://github.com/prometheus/prometheus/releases
     image: prom/prometheus:v2.43.0
-    container_name: lurisPrometheus
+    container_name: luris_Prometheus
     hostname: prometheus
     restart: unless-stopped
     ports:
@@ -69,7 +69,7 @@ services:
   grafana:
     # https://github.com/grafana/grafana/releases
     image: grafana/grafana:9.4.7
-    container_name: grafana
+    container_name: luris_grafana
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
@@ -88,7 +88,7 @@ services:
 
   otel-collector:
   # https://github.com/open-telemetry/opentelemetry-collector-contrib/releases
-    container_name: otel
+    container_name: luris_otel
     hostname: my-otel-collector
     image: otel/opentelemetry-collector-contrib:0.75.0
     command: ["--config=/etc/otel-collector-config.yaml"]
@@ -106,7 +106,7 @@ services:
 
   loki:
     image: grafana/loki:2.8.0
-    container_name: loki
+    container_name: luris_loki
     command: -config.file=/etc/loki/local-config.yaml
     ports:
       - 3100:3100
@@ -115,7 +115,7 @@ services:
 
   zipkin:
     image: openzipkin/zipkin
-    container_name: zipkin
+    container_name: luris_zipkin
     ports:
       - 9411:9411
     restart: always
