--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -9,15 +9,16 @@ jobs:
           rm -rf ./TelemetryTickets
       - name: "Clonning the repo"
         run: git clone https://${{secrets.CI_LURIS}}@github.com/luris26/TelemetryTickets.git
-      - name: Test Unit
-        run: | 
-          # docker run --rm --network="container:dbcontainer" -v "$(pwd):/app" -w /app/elemetryTickets -e DOTNET_CLI_HOME="/tmp/dotnet" --user $(id -u):$(id -g) mcr.microsoft.com/dotnet/sdk:8.0 dotnet test
-          cd ./TelemetryTickets/TicketsRUs.Tests   
-          dotnet test 
-      - name: Test Integration Test
-        run: | 
-          cd ./TelemetryTickets/TicketsRus.IntegrationTest  
-          dotnet test       
+      # - name: Test Unit
+      #   run: | 
+      #     # docker run --rm --network="container:dbcontainer" -v "$(pwd):/app" -w /app/elemetryTickets -e DOTNET_CLI_HOME="/tmp/dotnet" --user $(id -u):$(id -g) mcr.microsoft.com/dotnet/sdk:8.0 dotnet test
+      #     cd ./TelemetryTickets/TicketsRUs.Tests   
+      #     dotnet test 
+      # - name: Test Integration Test
+      #   run: | 
+      #     cd ./TelemetryTickets/TicketsRus.IntegrationTest  
+      #     dotnet test       
+      
       - name: Linting
         run: |
           cd ./TelemetryTickets/TicketsRUs.Tests 
