--- a/LurisDockercompose/docker-compose.yml
+++ b/LurisDockercompose/docker-compose.yml
@@ -84,6 +84,7 @@ services:
       - "2610:3000"
     depends_on:
       - prometheus
+      - loki
     networks:
       otel:
 
@@ -119,7 +120,6 @@ services:
     container_name: luris_zipkin
     ports:
       - 2356:9411
-    restart: always
     networks:
       otel:
 
