--- a/otel/otel.yml
+++ b/otel/otel.yml
@@ -12,9 +12,9 @@ exporters:
     tls:
       insecure: true
   zipkin:
-     endpoint:  http://zipkin:9411/api/v2/spans
+     endpoint:  http://luris_zipkin:9411/api/v2/spans
   loki:
-    endpoint: http://loki:3100/loki/api/v1/push
+    endpoint: http://luris_loki:3100/loki/api/v1/push
     tls:
       insecure: true
 
@@ -29,10 +29,11 @@ processors:
   batch:
 
 service:
-  extensions: [zpages, health_check]  # Enable zpages
+  extensions: [health_check]  # Enable zpages
   pipelines:
     metrics:
       receivers: [otlp]
+      processors: []
       exporters: [prometheus]
     traces:
       receivers: [otlp]
