--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -19,3 +19,12 @@ scrape_configs:
     target_label: instance
   - target_label: __address__
     replacement: blackbox:9115
+- job_name: "Metrics-from-blazor"
+  scrape_interval: 5s
+  static_configs:
+    - target: ["luris_server"]
+- job_name: Prometheus
+  scrape_interval: 5s
+  static_config:
+    - targets:
+      - prometheus:9090
