--- a/LurisDockercompose/docker-compose.yml
+++ b/LurisDockercompose/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   db:
     image: postgres
-    container_name: luris_server
+    container_name: luris_database
     environment:
       POSTGRES_USER:
         lurisdatabasehomework
@@ -22,6 +22,7 @@ services:
   
   server:
     build: ..
+    container_name: luris_server
     ports:
       - 6789:8080
     environment:
@@ -120,6 +121,16 @@ services:
     ports:
       - 2356:9411
     restart: always
+    networks:
+      otel:
+  
+  proxy:
+    image: nginx
+    container_name: luris_proxy
+    ports:
+      - 5489:80
+    volumes:
+      - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
     networks:
       otel:
 
