--- a/TicketsRUs.WebApp/appsettings.json
+++ b/TicketsRUs.WebApp/appsettings.json
@@ -5,5 +5,45 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Debug": {
+    "LogLevel": {
+        "Default": "Information"
+    }
+},
+"Console": {
+    "IncludeScopes": true,
+    "LogLevel": {
+        "Microsoft.Extensions.Hosting": "Warning",
+        "Default": "Information"
+    }
+},
+"EventSource": {
+    "LogLevel": {
+        "Microsoft": "Information"
+    }
+},
+"EventLog": {
+    "LogLevel": {
+        "Microsoft": "Information"
+    }
+},
+"AzureAppServicesFile": {
+    "IncludeScopes": true,
+    "LogLevel": {
+        "Default": "Warning"
+    }
+},
+"AzureAppServicesBlob": {
+    "IncludeScopes": true,
+    "LogLevel": {
+        "Microsoft": "Information"
+    }
+},
+"ApplicationInsights": {
+    "LogLevel": {
+        "Default": "Information"
+    }
 }
+}
+
