--- a/LurisDockercompose/docker-compose.yml
+++ b/LurisDockercompose/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
     volumes:
-      #- #grafana-data:/var/lib/grafana
+      #- #grafana-data:/var/lib/grafana/ksjkd
       - ../grafana/provisioning:/etc/grafana/provisioning
     restart: unless-stopped
     user: root
