--- a/LurisDockercompose/nginx-default.conf
+++ b/LurisDockercompose/nginx-default.conf
@@ -1,12 +1,16 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  telemetry-demo-grafana-luris;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
         proxy_pass http://luris_server:8080/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
     }
 
     #error_page  404              /404.html;
