--- a/LurisDockercompose/docker-compose.yml
+++ b/LurisDockercompose/docker-compose.yml
@@ -149,7 +149,7 @@ services:
       - STAGING=true 
     volumes:
       - luris_swag:/confg
-      - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx-default.conf:/config/nginx/site-confs/default.conf
     ports:
       - 5963:443
       # - 80:80 #optional
