Trying to do kubernetes

--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -36,6 +36,14 @@ jobs:
           docker compose down 
           docker compose up --build -d
 
+      - name: deploy-kube
+        run: |
+          docker build -t 144.17.92.12:5000/luris/blazor-web:1 .
+          docker push -t 144.17.92.12:5000/luris/blazor-web:1 .
+
+          kubectl apply -f kube/
+
+
 
 
 
