--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: deploy-kube
         run: |
+          cd TelemetryTickets
           docker build -t 144.17.92.12:5000/luris/blazor-web:1 .
           docker push -t 144.17.92.12:5000/luris/blazor-web:1 
 
