Trying to do kubernetes

--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           cd TelemetryTickets
           docker build -t 144.17.92.12:5000/luris/blazor-web:1 .
-          docker push -t 144.17.92.12:5000/luris/blazor-web:1 
+          docker push 144.17.92.12:5000/luris/blazor-web:1 
 
           kubectl apply -f kube/
 
