Trying to do kubernetes

--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -42,7 +42,7 @@ jobs:
           docker build -t 144.17.92.12:5000/luris/blazor-web:1 .
           docker push 144.17.92.12:5000/luris/blazor-web:1 
 
-          kubectl apply -f kube/
+          kubectl apply -f Kube/
 
 
 
