--- a/Kube/web-deployment.yml
+++ b/Kube/web-deployment.yml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        app: nginx
+        app: blazor-web
     spec:
       containers:
       - name: blazor-web
