--- a/Kube/database.yml
+++ b/Kube/database.yml
@@ -48,9 +48,9 @@ spec:
       - name: postgresstorage
         persistentVolumeClaim:
           claimName: blazor-web-db-pvc
-      - name: init-script
-        configMap:
-          name: blazor-web-postgres-init
+      # - name: init-script
+      #   configMap:
+      #     name: blazor-web-postgres-init
 ---
 apiVersion: v1
 kind: Service
