--- a/Kube/grafana-svc.yml
+++ b/Kube/grafana-svc.yml
@@ -1,8 +1,9 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Service
 metadata:
   namespace: luris
   name: grafana-service
+spec:
   type: ClusterIP
   selector:
     app: grafana
