--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -21,20 +21,20 @@ jobs:
       #     cd ./TelemetryTickets/TicketsRus.IntegrationTest  
       #     dotnet test       
       
-      - name: Linting
-        run: |
-          cd ./TelemetryTickets/TicketsRUs.Tests 
-          dotnet format --verify-no-changes --severity warn
-      - name: "Turn On Containers"
-        run: |
-          cd ./TelemetryTickets/LurisDockercompose
-          docker compose up --build -d
+      # - name: Linting
+      #   run: |
+      #     cd ./TelemetryTickets/TicketsRUs.Tests 
+      #     dotnet format --verify-no-changes --severity warn
+      # - name: "Turn On Containers"
+      #   run: |
+      #     cd ./TelemetryTickets/LurisDockercompose
+      #     docker compose up --build -d
 
-      - name: deploy
-        run: |
-          cd ./TelemetryTickets/LurisDockercompose
-          docker compose down 
-          docker compose up --build -d
+      # - name: deploy
+      #   run: |
+      #     cd ./TelemetryTickets/LurisDockercompose
+      #     docker compose down 
+      #     docker compose up --build -d
 
       - name: deploy-kube
         run: |
@@ -42,12 +42,15 @@ jobs:
           docker build -t 144.17.92.12:5000/luris/blazor-web:1 .
           docker push 144.17.92.12:5000/luris/blazor-web:1 
 
-          # kubectl -n luris create configmap blazor-web-postgres-init --from-file=init.sql
+          #kubectl -n luris create configmap blazor-web-postgres-init --from-file=init.sql
           cd kube-configs
-          # kubectl -n luris delete configmap otel-collector-config || true
-          # kubectl -n luris create configmap otel-collector-config --from-file=init.sql
+
+          kubectl -n luris delete configmap otel-collector-config || true
+          kubectl -n luris create configmap otel-collector-config --from-file=otel-collector-config.yml
+
           kubectl -n luris delete configmap grafana-datasource-config || true
           kubectl -n luris create configmap grafana-datasource-config --from-file=grafana-datasource-config.yml
+
           cd ..
           kubectl apply -f Kube/
 ##################################################################################################
