grafana trying grafana-datasource-config

--- a/Kube/grafana-deployment.yml
+++ b/Kube/grafana-deployment.yml
@@ -29,7 +29,7 @@ spec:
         volumeMounts:
           - name: datasources
             mountPath: /etc/grafana/provisioning/datasources/datasource.yml
-            subPath: grafana-datasource.yml
+            subPath: grafana-datasource-config.yml
       volumes:
         - name: datasources
           configMap:
