--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -52,7 +52,12 @@ jobs:
           kubectl -n luris create configmap grafana-datasource-config --from-file=grafana-datasource-config.yml
 
           cd ..
-          kubectl apply -f Kube/
+
+          RUN_ID=${{ github.run_id }}
+          for file in ./kube; do
+            echo "Applying $file"
+            cat $file |envsubst | kubectl apply -f -
+          done
 ##################################################################################################
 
 
