--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -54,10 +54,11 @@ jobs:
           cd ..
 
           RUN_ID=${{ github.run_id }}
-          for file in ./kube; do
+          for file in ./kube/*; do
             echo "Applying $file"
             cat $file |envsubst | kubectl apply -f -
           done
+          
 ##################################################################################################
 
 
